fixed image sizing issue, text overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -181,13 +181,14 @@ form {
 
 .movie-display-tile {
   position: relative;
-  margin: 10px 0px;
+  margin: 15px 0px;
   width: 300px;
   height: 450px;
-  overflow-y: hidden;
 }
 
 .movie-display-tile img {
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   border-radius: 15px;
 }
@@ -204,9 +205,14 @@ form {
 }
 
 .movie-display-tile:hover .img-description {
+  box-sizing: border-box;
+  width: 83%;
+  height: 90%;
   visibility: visible;
   opacity: 1;
   margin: 25px;
+  text-overflow: ellipsis;
+  overflow-y: auto;
 }
 
 .movie-display-tile:hover .filler {
@@ -222,15 +228,7 @@ form {
   margin-bottom: 10px;
 }
 
-.score {
-  font-weight: 700;
-}
-
-.genre {
-  margin-bottom: 10px;
-}
-
-.score-paragraph {
+.movie-attribute {
   margin-bottom: 10px;
 }
 
